--- a/main.html
+++ b/main.html
@@ -111,15 +111,18 @@
     <div class="charts">
       <div class="canvas categoryIncomes" id="categoryIncomes">
         <h2 class="charts-title">Доходы</h2>
+        <img src="images/Screenshot_1.png" alt="">
       </div>
       <div class="line"></div>
       <div class="canvas categoryExpenses" id="categoryExpense">
         <h2 class="charts-title">Расходы</h2>
+        <img src="images/Screenshot_2.png" alt="">
       </div>
     </div>
   </section>
 </main>
 
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
